Trigger alt text panel from suggested edits flow
This commit adds a new panel for the alt text experiment, and triggers it for an eligible flow. At this point it is based on some temporary flags that will be updated.
It also creates a AltTextExperimentViewModel that captures the image info for the alt text task

--- a/Wikipedia/Localizations/qqq.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/qqq.lproj/Localizable.strings
@@ -104,6 +104,11 @@
 "action-update" = "Title of the update action.";
 "add-articles-to-reading-list" = "Title for the view in charge of adding articles to a reading list - $1 is replaced with the number of articles to add";
 "advanced-settings-title" = "Title for advanced settings screen";
+"alt-text-add-button-title" = "Title for the Add button on the alt text modal";
+"alt-text-do-not-add-button-title" = "Title for the Do Not Add button on the alt text modal";
+"alt-text-modal-subtitle-image-recommendation" = "Subtitle text for the alt text suggested edit prompt modal when the user is adding images from the add an image task";
+"alt-text-modal-title" = "Title text for the alt text suggested edit prompt modal";
+"alt-text-modalsubtitle-regular-edit" = "Subtitle text for the alt text suggested edit prompt modal when the user is finished editing an article";
 "announcements-dismiss" = "Button text indicating a user wants to dismiss an announcement {{Identical|No thanks}}";
 "app-store-keywords" = "Short list of keywords describing the app for the app store. It is required that these are individual words, not phrases, and are comma separated.";
 "app-store-release-notes" = "Short summary of what is new in this version of the app for the app store";
