--- a/Wikipedia/Localizations/qqq.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/qqq.lproj/Localizable.strings
@@ -202,6 +202,7 @@
 "description-welcome-start-editing-button" = "Text for button for dismissing description editing welcome screens";
 "developer-settings" = "Title for developer settings view.";
 "developer-settings-enable-alt-text-experiment" = "Title for setting to enable alt text experiment. Displayed on the developer settings view.";
+"developer-settings-enable-alt-text-experiment-en" = "Title for setting to enable alt text experiment for English Wikipedia. Displayed on the developer settings view.";
 "developer-settings-suppress-image-rec-post" = "Title for setting to suppress image recommendations edit postsing. Displayed on the developer settings view.";
 "diff-article-revision-history" = "Label for article edit history menu item in diff more menu.";
 "diff-change-added" = "Accessibility text announced in VoiceOver when content additions are announced in a diff. $1 is replaced with the added content.";
