--- a/Wikipedia/Localizations/fr.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/fr.lproj/Localizable.strings
@@ -150,6 +150,13 @@
 "action-update" = "Mettre à jour";
 "add-articles-to-reading-list" = "Ajouter $1 article{{PLURAL:$1||s}} à la liste de lecture";
 "advanced-settings-title" = "Paramètres avancés";
+"alt-text-add-button-title" = "Ajouter";
+"alt-text-do-not-add-button-title" = "Ne pas ajouter";
+"alt-text-experiment-text-field-placholder" = "Décrire l'image";
+"alt-text-experiment-view-title" = "Ajoutez un texte alternatif";
+"alt-text-modal-title" = "Ajouter le texte alternatif de l'image manquante ?";
+"alt-text-modal-subtitle-regular-edit" = "Cet article contient une image dont le texte alternatif est manquant. Ajouter une description pour les lecteurs malvoyants?";
+"alt-text-modal-subtitle-image-recommendation" = "L'image précédente n'a pas de texte alternatif. Ajouter une description à l'image pour les lecteurs malvoyants?";
 "announcements-dismiss" = "Fermer";
 "app-store-keywords" = "Wikipédia, référence, wiki, encyclopédie, infos, connaissance, recherche, informations, actualités, découverte, apprendre, étudier, éducation";
 "app-store-release-notes" = "Flux d’exploration complètement personnalisables et plus faciles à lire. Localisation, améliorations des performances et corrections d’anomalies.";
