--- a/Wikipedia/Localizations/qqq.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/qqq.lproj/Localizable.strings
@@ -109,6 +109,7 @@
 "alt-text-experiment-character-counter-format" = "Character counter that appears as the user is typing in the alt text view. $1 is replaced with the number of characters the user has typed. $2 will be replaced with the maximum character number recommended for alt text.";
 "alt-text-experiment-character-counter-warning" = "Warning label that appears underneath the alt text view when the user has typed beyond 125 characters.";
 "alt-text-experiment-edit-summary" = "Automatic edit summary added to edit after user publishes an edit through the alt-text experiment.";
+"alt-text-experiment-guidance-button" = "Button title on the alt text input screen. Tapping it displays an informative onboarding screen about how to write alt text for images.";
 "alt-text-experiment-text-field-description" = "Informational description for what should be input into the alt text text view. Displayed underneath the alt text text view.";
 "alt-text-experiment-text-field-placholder" = "Text used for the text field placholder on the alt text view";
 "alt-text-experiment-view-title" = "Title text for alt text experiment view";
