--- a/Wikipedia/Localizations/zh-hant.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/zh-hant.lproj/Localizable.strings
@@ -152,7 +152,11 @@
 "advanced-settings-title" = "進階設定";
 "alt-text-add-button-title" = "新增";
 "alt-text-do-not-add-button-title" = "不要新增";
+"alt-text-experiment-character-counter-format" = "$1/$2";
+"alt-text-experiment-character-counter-warning" = "請盡量使替代文字保持簡短，讓使用者容易理解影像內容";
 "alt-text-experiment-edit-summary" = "已新增替代文字";
+"alt-text-experiment-guidance-button" = "替代文字撰寫指南";
+"alt-text-experiment-text-field-description" = "為看不到影像的讀者提供的文字描述";
 "alt-text-experiment-text-field-placholder" = "描述圖片";
 "alt-text-experiment-view-title" = "新增替代文字";
 "alt-text-modal-subtitle-image-recommendation" = "前一張圖片缺少替代文字，您要幫視覺障礙讀者們新增一個圖片描述嗎？";
