--- a/Wikipedia/Localizations/en.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/en.lproj/Localizable.strings
@@ -206,8 +206,8 @@
 "developer-settings" = "Developer Settings";
 "developer-settings-enable-alt-text-experiment" = "Enable Alt Text experiment.";
 "developer-settings-enable-alt-text-experiment-en" = "Enable Alt Text experiment for English Wikipedia.";
-"developer-settings-force-alt-text-entry-point" = "Force alt text entry point.";
 "developer-settings-send-analytics-to-wmflabs" = "Send analytics to wmflabs.";
+"developer-settings-set-alt-text-experiment-100" = "Set alt text experiment percentage to 100.";
 "developer-settings-suppress-image-rec-post" = "Do not post image recommendations edit.";
 "diff-article-revision-history" = "Article revision history";
 "diff-change-added" = "Addition, $1, addition end.";
