--- a/Wikipedia/Localizations/en.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/en.lproj/Localizable.strings
@@ -106,15 +106,15 @@
 "advanced-settings-title" = "Advanced settings";
 "alt-text-add-button-title" = "Add";
 "alt-text-do-not-add-button-title" = "Do not add";
+"alt-text-experiment-caption-title" = "Image caption";
 "alt-text-experiment-edit-summary" = "Added alt text";
+"alt-text-experiment-review-title" = "Review";
 "alt-text-experiment-text-field-placholder" = "Describe the image";
 "alt-text-experiment-view-title" = "Add alt text";
-"alt-text-experimet-caption-title" = "Image caption";
-"alt-text-license" = "By publishing, you agree to the [Terms of Use]($1), and to irrevocably release your contributions under the [CC BY-SA 3.0]($2) license.";
+"alt-text-license" = "By publishing changes, you agree to the [Terms of Use]($1),  and you irrevocably agree to release your contribution under the [CC BY-SA 3.0]($2) license  and the [GFDL]($3). You agree that a hyperlink or URL is sufficient attribution under the Creative Commons license.";
 "alt-text-modal-subtitle-image-recommendation" = "The previous image is missing alt text. Add a description to the image for visually impaired readers?";
 "alt-text-modal-subtitle-regular-edit" = "There is an image in this article that is missing alt text. Add a description for visually impaired readers?";
 "alt-text-modal-title" = "Add missing image alt text?";
-"alt-text-review-title" = "Review";
 "alt-text-title" = "Alt text";
 "announcements-dismiss" = "Dismiss";
 "app-store-keywords" = "Wikipedia, reference, wiki, encyclopedia, info, knowledge, research, information, explore, learn";
