--- a/Wikipedia/Localizations/qqq.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/qqq.lproj/Localizable.strings
@@ -106,15 +106,15 @@
 "advanced-settings-title" = "Title for advanced settings screen";
 "alt-text-add-button-title" = "Title for the Add button on the alt text modal";
 "alt-text-do-not-add-button-title" = "Title for the Do Not Add button on the alt text modal";
+"alt-text-experiment-caption-title" = "title for image caption field on alt text preview";
 "alt-text-experiment-edit-summary" = "Automatic edit summary added to edit after user publishes an edit through the alt-text experiment.";
+"alt-text-experiment-review-title" = "Title for the review stpe of the alt text experiment";
 "alt-text-experiment-text-field-placholder" = "Text used for the text field placholder on the alt text view";
 "alt-text-experiment-view-title" = "Title text for alt text experiment view";
-"alt-text-experimet-caption-title" = "title for image caption field on alt text preview";
 "alt-text-license" = "Text for information about the Terms of Use and edit licenses. Do not translate url. $1 and $1 are replaced by the terms of use and license links.";
 "alt-text-modal-subtitle-image-recommendation" = "Subtitle text for the alt text suggested edit prompt modal when the user is adding images from the add an image task";
 "alt-text-modal-subtitle-regular-edit" = "Subtitle text for the alt text suggested edit prompt modal when the user is finished editing an article";
 "alt-text-modal-title" = "Title text for the alt text suggested edit prompt modal";
-"alt-text-review-title" = "Title for the review stpe of the alt text experiment";
 "alt-text-title" = "Title for alt text";
 "announcements-dismiss" = "Button text indicating a user wants to dismiss an announcement {{Identical|No thanks}}";
 "app-store-keywords" = "Short list of keywords describing the app for the app store. It is required that these are individual words, not phrases, and are comma separated.";
