--- a/Wikipedia/Localizations/en.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/en.lproj/Localizable.strings
@@ -208,10 +208,10 @@
 "description-welcome-promise-title" = "By starting, I promise not to misuse this feature";
 "description-welcome-start-editing-button" = "Start editing";
 "developer-settings" = "Developer Settings";
+"developer-settings-always-show-alt-text-entry-point" = "Always show alt text entry point.";
 "developer-settings-enable-alt-text-experiment" = "Enable Alt Text experiment.";
 "developer-settings-enable-alt-text-experiment-en" = "Enable Alt Text experiment for English Wikipedia.";
 "developer-settings-send-analytics-to-wmflabs" = "Send analytics to wmflabs.";
-"developer-settings-set-alt-text-experiment-100" = "Set alt text experiment percentage to 100.";
 "developer-settings-suppress-image-rec-post" = "Do not post image recommendations edit.";
 "diff-article-revision-history" = "Article revision history";
 "diff-change-added" = "Addition, $1, addition end.";
