--- a/Wikipedia/Localizations/zh-hans.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/zh-hans.lproj/Localizable.strings
@@ -179,6 +179,16 @@
 "alt-text-experiment-character-counter-format" = "$1/$2";
 "alt-text-experiment-character-counter-warning" = "尽量让替代文字保持简短，以便用户能够轻松理解图像内容";
 "alt-text-experiment-guidance-button" = "替代文字撰写指南";
+"alt-text-experiment-onboarding-item-1-subtitle" = "1-2 行简单的文字，不要使用简称、缩写或行话。";
+"alt-text-experiment-onboarding-item-1-title" = "保持简短、清晰";
+"alt-text-experiment-onboarding-item-2-subtitle" = "切勿加入自己的研究、解释或观点。";
+"alt-text-experiment-onboarding-item-2-title" = "对所看到的内容进行描述";
+"alt-text-experiment-onboarding-item-3-subtitle" = "但不要照抄题注中的文字。";
+"alt-text-experiment-onboarding-item-3-title" = "将重点放在与文章的关联性上";
+"alt-text-experiment-onboarding-item-4-subtitle" = "不要以“这是一张…的图像”开头，而是描述媒介或风格（如果相关）";
+"alt-text-experiment-onboarding-item-4-title" = "图像类型";
+"alt-text-experiment-onboarding-secondary-button-title" = "查看示例";
+"alt-text-experiment-onboarding-title" = "如何为图像撰写替代文字";
 "alt-text-experiment-text-field-description" = "为看不到图像的读者提供文字描述";
 "alt-text-experiment-text-field-placholder" = "描述图片";
 "alt-text-experiment-view-title" = "添加替代文字";
