--- a/Wikipedia/Localizations/pt-br.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/pt-br.lproj/Localizable.strings
@@ -163,10 +163,10 @@
 "alt-text-experiment-onboarding-item-2-title" = "Descreva o que pode ser visto";
 "alt-text-experiment-onboarding-item-3-subtitle" = "Mas não repita o texto que já está na legenda.";
 "alt-text-experiment-onboarding-item-3-title" = "Foque no que é relevante para o artigo";
-"alt-text-experiment-onboarding-item-4-subtitle" = "Mas não repita o texto que já está na legenda.";
+"alt-text-experiment-onboarding-item-4-subtitle" = "Não comece com \"Esta é uma imagem de...\", mas descreva o material ou estilo, se relevante";
 "alt-text-experiment-onboarding-item-4-title" = "Tipo de imagem";
 "alt-text-experiment-onboarding-secondary-button-title" = "Ver exemplos";
-"alt-text-experiment-onboarding-title" = "Como escrever texto alternativopara imagens";
+"alt-text-experiment-onboarding-title" = "Como escrever texto alternativo para imagens";
 "alt-text-experiment-text-field-description" = "Descrição do texto para leitores que não conseguem ver a imagem";
 "alt-text-experiment-text-field-placholder" = "Descreva a imagem";
 "alt-text-experiment-view-title" = "Adicionar texto alternativo";
