--- a/Wikipedia/Localizations/fr.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/fr.lproj/Localizable.strings
@@ -172,6 +172,13 @@
 "alt-text-experiment-text-field-description" = "Texte de description pour les lecteurs qui ne peuvent pas voir l'image";
 "alt-text-experiment-text-field-placholder" = "Décrire cette image";
 "alt-text-experiment-view-title" = "Ajoutez un texte alternatif";
+"alt-text-feedback-alert-subtitle" = "Utiliseriez-vous une fonctionnalité qui vous fournirait un flux d'images nécessitant un texte alternatif?";
+"alt-text-feedback-alert-title" = "Nous avons besoin de votre avis";
+"alt-text-feedback-survey-neutral" = "Neutre";
+"alt-text-feedback-survey-satisfied" = "Satisfait";
+"alt-text-feedback-survey-subtitle" = "Êtes-vous satisfait de cette fonctionnalité?";
+"alt-text-feedback-survey-title" = "Contribuer à l'amélioration de la fonctionnalité";
+"alt-text-feedback-survey-unsatisfied" = "Insatisfait";
 "alt-text-license" = "En publiant des modifications, vous acceptez les [conditions d'utilisation]($1) et vous acceptez irrévocablement de publier votre contribution sous la licence [CC BY-SA 3.0]($2) et la [GFDL]($3). Vous reconnaissez qu'un lien hypertexte ou une URL suffit pour attribuer la licence Creative Commons.";
 "alt-text-modal-subtitle-image-recommendation" = "Les images précédentes manquent de textes alternatifs. Ajoutez une description à l'mage pour aider les lecteurs de comprendre.";
 "alt-text-modal-subtitle-regular-edit" = "Cet article contient une image dont le texte alternatif est manquant. Ajouter une description pour les lecteurs malvoyants ?";
