--- a/Wikipedia/Localizations/pt-br.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/pt-br.lproj/Localizable.strings
@@ -174,6 +174,14 @@
 "alt-text-modal-title" = "Adicionar o texto alternativo que está faltando da imagem?";
 "alt-text-modal-subtitle-regular-edit" = "Há uma imagem neste artigo que não tem texto alternativo. Adicionar uma descrição para leitores com deficiência visual?";
 "alt-text-modal-subtitle-image-recommendation" = "A imagem anterior está sem texto alternativo. Adicionar uma descrição à imagem para leitores com deficiência visual?";
+"alt-text-survey-option-1" = "Não tenho certeza de como descrever uma imagem";
+"alt-text-survey-option-2" = "Não tenho experiência para adicionar texto alternativo";
+"alt-text-survey-option-3" = "Não entendo como isto é diferente de uma legenda";
+"alt-text-survey-option-4" = "Tenho problemas técnicos";
+"alt-text-survey-option-5" = "Tenho deficiência visual";
+"alt-text-survey-option-6" = "Não estou interessado em escrever texto alternativo para imagens";
+"alt-text-survey-option-7" = "Não tenho tempo";
+"alt-text-survey-subtitle" = "Compartilhe o(s) motivo(s) pelo(s) qual(is) você não adicionará texto alternativo.";
 "alt-text-title" = "Texto alternativo";
 "announcements-dismiss" = "Ignorar";
 "app-store-keywords" = "Wikipédia, referência, wiki, enciclopédia, informação, conhecimento, pesquisa, informação, explorar, aprender";
@@ -1086,6 +1094,10 @@
 "sort-by-recently-added-action" = "Adicionado recentemente";
 "sort-by-title-action" = "Título";
 "suggested-edits-title" = "Edições sugeridas";
+"survey-instructions" = "Selecione uma ou mais opções";
+"survey-other-placeholder" = "Outro";
+"survey-submit" = "Enviar";
+"survey-title" = "Motivo";
 "table-of-contents-button-label" = "Tabela de conteúdos";
 "table-of-contents-close-accessibility-hint" = "Fechar";
 "table-of-contents-close-accessibility-label" = "Fechar Tabela de conteúdos";
